# Smart-Expense-Orchestrator

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
src/: main.py
src/api/: routes.py
src/core/: config.py  logger.py
src/db/: database.py  models.py
src/schemas/: receipt.py
src/services/: llm_service.py
src/worker/: celery_app.py  tasks.py
tests/: conftest.py
tests/api/: test_routes.py
